<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/pic1"
        android:layout_width="405dp"
        android:layout_height="156dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/battlemode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/battle_invite"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pic1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="45dp"
        android:checked="true"
        android:text="Yes"
        android:textColor="@color/colorPrimary"
        android:thumbTint="@color/colorGreen"
        android:trackTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/start_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorGreen"
        android:text="@string/start_now"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="67dp"
        android:layout_height="36dp"
        android:layout_marginEnd="80dp"
        android:background="@android:color/transparent"
        android:text="@string/select_all"
        android:textColor="@color/colorPrimary"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="311dp"
        android:layout_height="312dp"

        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/start_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/response_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/response_time"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/choose_opponent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/combat_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/combat_type"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/response_time"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/choose_opponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/choose_opponent"
            android:textColor="@color/colorPrimary"

            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ashley"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/Neha"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="292dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/neha"
            android:textColor="@color/colorPrimary"

            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/publish_results"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioButton
            android:id="@+id/daming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/daming"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Neha"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/jeremy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/colorGreen"
            android:checked="true"
            android:text="@string/jeremy"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/daming"
            tools:layout_editor_absoluteX="52dp" />

        <RadioButton
            android:id="@+id/ashley"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/ashley"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/jeremy"
            tools:layout_editor_absoluteX="56dp" />

        <TextView
            android:id="@+id/publish_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/publish_results"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/your_mutual"
            tools:layout_editor_absoluteX="64dp" />

        <TextView
            android:id="@+id/your_mutual"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/your_mutual_friends_can_view"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="559dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />


</android.support.constraint.ConstraintLayout>