<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <EditText
        android:id="@+id/nickName"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nick_name"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />


    <TextView
        android:id="@+id/uploadPic"
        android:layout_width="184dp"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:text="@string/upload_profile_pic"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Upload/Take Profile Picture" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_marginBottom="10dp"

        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email_address"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/passWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/nickName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/next"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorGreen"
        android:text="@string/next"
        android:textColor="#4E4D4D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/createAProfile"
        android:layout_width="170dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_a_profile"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:text="@string/skip"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/user_profile"
        app:layout_constraintBottom_toTopOf="@+id/uploadPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user_profile" />

    <View
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/back" />

</android.support.constraint.ConstraintLayout>