<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E4D4D"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/next"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="76dp"
        android:background="@color/colorGreen"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createAProfile"
        android:layout_width="185dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:text="Create a Profile"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/yourWeight"
        android:layout_width="64dp"
        android:layout_height="42dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:text="@string/your_height"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/inputWeight"
        app:layout_constraintEnd_toStartOf="@+id/inputHeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yourWeight"
        android:layout_width="64dp"
        android:layout_height="42dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="15dp"
        android:text="@string/your_weight"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="10dp"
        android:text="@string/your_experience_with_plank"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/experienceWithPlank"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Boy"
        android:layout_width="53dp"
        android:layout_height="43dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="10dp"
        android:text="@string/boy"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/inputHeight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Girl"
        android:layout_width="67dp"
        android:layout_height="44dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/girl"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/inputHeight"
        app:layout_constraintStart_toEndOf="@+id/Boy" />

    <TextView
        android:id="@+id/text"
        android:layout_width="225dp"
        android:layout_height="25dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="5dp"
        android:text="@string/to_measure_your_workout"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <View
        android:id="@+id/view4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/SKIP"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="SKIP"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorGreen"
        app:layout_constraintBottom_toTopOf="@+id/Boy"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorGreen"
        app:layout_constraintBottom_toTopOf="@+id/Girl"
        app:layout_constraintStart_toEndOf="@+id/Boy"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputHeight"
        android:layout_width="158dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/white"

        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/inputWeight"
        app:layout_constraintStart_toEndOf="@+id/yourWeight" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="158dp"
        android:layout_height="34dp"

        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/yourWeight" />

    <EditText
        android:id="@+id/experienceWithPlank"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>